# mmk1-relay

./: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  README.md  log.txt  main.cpp
cmake/: FindRtMidi.cmake
